<resources>
    <string name="app_name">SportEvent</string>
    <string name="action_drawer_feedback">Feedback</string>
    <string name="action_drawer_login">Login</string>
    <string name="action_drawer_refer">Share GiliDanda</string>
    <string name="action_drawer_bugs">Report Bugs</string>
    <string name="action_drawer_settings">Settings</string>
    <string name="action_drawer_logout">Logout</string>
    <string name="txt_explore_food">EXPLORE FOOD</string>
    <string name="txt_explore_all">EXPLORE</string>
    <string name="tv_sponsored">Sponsored</string>
    <string name="openDrawer">Drawer open</string>
    <string name="closeDrawer">Drawer closed</string>
    <string name="error_no_vendors">Sorry ! No vendors available</string>
    <string name="txt_trending_restaurants">Restaurants</string>
    <string name="txt_most_viewed_restaurants">Most viewed restaurants</string>
    <string name="txt_view_all">VIEW ALL</string>
    <string name="txt_trending_spas"><![CDATA[Spas & Salons]]></string>
    <string name="txt_most_viewed_spas">Most view spas</string>
    <string name="txt_trending_groceries">Groceries</string>
    <string name="txt_most_viewed_groceries">Most viewed grocery stores</string>
    <string name="txt_trending_medicines">Medicines</string>
    <string name="txt_most_viewed_medicines">Most viewed medical stores</string>
    <string name="txt_trending_activities">Activities</string>
    <string name="txt_most_viewed_activities">Most viewed activities</string>
    <string name="txt_trending_retails"><![CDATA[Fashion & Retail]]></string>
    <string name="txt_most_viewed_retails">Most viewed fashion and retail stores</string>
    <string name="txt_trending_salons">Salons</string>
    <string name="txt_most_viewed_salons">Most viewed salons</string>
    <string name="hint_title">Title</string>
    <string name="hint_discription">Discription</string>
    <string name="btn_login">Sign In</string>
    <string name="tv_newUser_label">New User? Sign up</string>
    <string name="tv_forgotPassword_label">Forgot Password ?</string>
    <string name="err_msg_email">Invalid Email</string>
    <string name="err_msg_password">Invalid Password</string>
    <string name="err_msg_registered_email">Please enter registered email Id</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_update">Update</string>
    <string name="hint_name">User Name</string>
    <string name="hint_id">User Id</string>
    <string name="err_msg_username">Invalid username</string>
    <string name="txt_reset_mail_sent">Reset mail sent. Please check your mail.</string>
    <string name="err_msg_phone_invalid">Invalid phone number</string>
    <string name="txt_signing_in">Signing In</string>
    <string name="action_drawer_profile">Profile</string>
    <string name="action_drawer_tasks">Tasks</string>
    <string name="action_drawer_menu">Menus</string>
    <string name="err_some_error_occured">Some error occurred</string>
    <string name="btn_signup">Sign Up</string>
    <string name="txt_signing_up">Signing Up</string>
    <string name="txt_please_wait">Please Wait</string>
    <string name="txt_trending_deals">Top deals</string>
    <string name="txt_most_viewed_deals">Most availed deals near you</string>
    <string name="action_drawer_videos">Videos</string>
    <string name="action_drawer_events">Events</string>
    <string name="action_drawer_articles">Articles</string>
    <string name="hint_venue">Venue</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_city">City</string>
    <string name="hint_chest">Chest (in CMs)</string>
    <string name="hint_height">Height (in CMs)</string>
    <string name="hint_weight">Weight (in KGs)</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_data_updated">Data Updated</string>
    <string name="txt_no_data">No data</string>
    <string name="err_msg_date_invalid">Invalid date</string>
    <string name="error_no_news">No news found</string>
    <string name="action_share">Share</string>
    <string name="event_name">Basket Ball</string>
    <string name="hint_end_date">End Date</string>
    <string name="btn_save">Save</string>
</resources>
